--- a/index.html
+++ b/index.html
@@ -5,18 +5,18 @@
         <title>Binary Calculator</title>
         <link rel="stylesheet" href="style.css" type="text/css">
     </head>
-    <body>
+    <body onload="binary()">
       <div id="container">
         <div id="res"></div>
         <div id="btns">
-          <button id="btn0" onclick="clickZero()">0</button>
-          <button id="btn1" onclick="clickOne()">1</button>
-          <button id="btnClr" onclick="clickClr()">C</button>
-          <button id="btnEql" onclick="clickEql()">=</button>
-          <button id="btnSum" onclick="clickSum()">+</button>
-          <button id="btnSub" onclick="clickSub()">-</button>
-          <button id="btnMul" onclick="clickMul()">*</button>
-          <button id="btnDiv" onclick="clickDiv()">/</button>
+          <button id="btn0" onclick="fun1()">0</button>
+          <button id="btn1" onclick="fun2()">1</button>
+          <button id="btnClr" onclick="fun3()">C</button>
+          <button id="btnEql" onclick="fun4()">=</button>
+          <button id="btnSum" onclick="fun5()">+</button>
+          <button id="btnSub" onclick="fun6()">-</button>
+          <button id="btnMul" onclick="fun7()">*</button>
+          <button id="btnDiv" onclick="fun8()">/</button>
         </div>                  
       </div> 
       <script src="cal.js" type="text/javascript"></script>
